--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^6.1.0",
-    "@types/express": "^5.0.0",
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "tsup": "^8.3.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.3",
     "prisma": "^6.1.0",
     "tsx": "^4.19.2",
